--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,15 +8,15 @@ dataset_dir: "./datasets"
 
 # train options
 seed: 42 # sacred handles automatic seeding when passed in the config
-batch_size: 128
-image_size: 224
+batch_size: 32
+image_size: 256
 start_epoch: 0
-epochs: 100
-dataset: "CIFAR10" # STL10
+epochs: 500
+dataset: "cytology" # STL10
 pretrain: True 
 
 # model options
-resnet: "resnet18"
+resnet: "resnet50"
 projection_dim: 64 # "[...] to project the representation to a 128-dimensional latent space"
 
 # loss options
